--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "commander": "^2.9.0",
     "compression": "^1.6.2",
     "express": "^4.14.0",
+    "form-data": "^2.1.2",
     "lodash": "^4.13.1",
     "mkdirp": "^0.5.1",
     "morgan": "^1.7.0",
-    "node-lmdb": "Venemo/node-lmdb#ffe29fc5ef8104109d4c0a595fced5986f35f6a1",
+    "multer": "^1.2.0",
+    "node-lmdb": "Venemo/node-lmdb#3a491bdeeef172db191d4ec3836c8ae3fd4ce72b",
     "progress": "^1.1.8",
     "scrypt": "^6.0.3",
     "secp256k1": "^3.2.0",
